--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,57 @@
+/* body section */
 body {
     background-color: darkgray;
 }
+/* wrapper class for main content */
 .wrapper {
     width: 850px;
     margin: auto;
     background-color: #e7bf78;
 } 
+/* header section */
 header {
     background-color: #5858eb;
     height: 150px;
 }
-header h3 {
+/* main header */
+header h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     color: white;
 }
+/* header logo */
 .code-logo {
     margin: 0px 0px 30px 20px;
 }
+/* header symbols */
+.symbols {
+    display: inline-block;
+    text-align: center;
+    align-items: center;
+    width: 200px;
+    margin: 10px 0 0 200px;
+}
+/* header navigation */
 .navi {
     float: right;
     margin: 70px 30px 0 0;
 }
+nav a {
+    text-align: center;
+    text-decoration: none;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+/* portfolio image */
+.portfolio {
+    float: left;
+    width: 300px;
+    height: 320px;
+    border-radius: 50%;
+    margin: 50px 0 0 50px;
+}
+/* pseudo-classes for links */
 a:link {
     color: #ff0000;
   }
@@ -34,18 +64,13 @@ a:link {
   a:active {
     color: #0000ff;
   }
-nav a {
-    text-align: center;
-    text-decoration: none;
-    background-color: white;
-    padding: 10px;
-    border-radius: 5px;
-}
+/* horizontal line rotated */
 hr {
     transform: rotate(90deg) translateX(200px);
     width: 400px;
     border: 2px solid #5858eb;
-}    
+}   
+ /* introduction section */
 #intro {
     float: right;
     margin: 30px 20px 0 0;
@@ -56,44 +81,33 @@ hr {
 #intro li {
     list-style-type: none;
 }
-section h3 {
+section h2 {
     text-align: center;
     font-family: fantasy;
     font-size: 30px;
 }
-.portfolio {
-    float: left;
-    width: 300px;
-    height: 320px;
-    border-radius: 50%;
-    margin: 50px 0 0 50px;
-}
-.symbols {
-    display: inline-block;
-    text-align: center;
-    align-items: center;
-    width: 200px;
-    margin: 10px 0 0 200px;
-}
+/* about section */
 #about {
     float: right;
-    /* width: 375px; */
     display: block;
     margin: 50px;
     font-size: 20px;
 }
+/* footer section */
 .footer {
     background-color: #5858eb;
     height: 150px;
     clear: both;
     color: white
+
 }
+/* contact section */
 #contact {
-    float: right;
-    display: inline-block;
-    margin: 0px 50px 0 0;
+    padding-top: 1px;
     font-size: 20px;
+    text-align: center;
 }
+/* social media icons */
 .fa {
     width: 50px;
     height: 50px;
